<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/urlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/url_edit_text"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/urlButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/url_button" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/locEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/loc_edit_text"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/locButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/loc_button" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/shareEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/share_edit_text"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/share_button" />
</LinearLayout>